Fix gap bug on umkm page

--- a/styles/umkm.css
+++ b/styles/umkm.css
@@ -52,7 +52,7 @@ html{
 /* SECTIONS */
 .content{
     position: relative;  
-    width: 100%;
+    width: 100vw;
     overflow-x: hidden;
 }
 
